--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Typographix</title>
     <!-- Zero to Mastery Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="./css/compiled_style.css">
 </head>
 <body>
     <!-- Script -->
