--- a/index.html
+++ b/index.html
@@ -5,10 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typographix</title>
     <!-- Zero to Mastery Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="stylesheet" href="./css/compiled_style.css">
 </head>
 <body>
+
+    <main>
+        <!-- Home Section -->
+        <section id="home">
+            <div class="video-container">
+                <video autoplay muted loop>
+                    <source src="assets/future-tunnel.mp4">
+                </video>
+            </div>
+            <!-- Overlay -->
+            <div class="overlay">
+                <div>
+                    <h1>Typographix</h1>
+                    <p>Where ideas become reality</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <!-- Script -->
     <script src="https://kit.fontawesome.com/23499415f6.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
