--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
                 </div>
             </div>
         </section>
+
+        <!-- About Section -->
+        <section id="about">
+            <div class="about-container">
+                <div class="text-container">
+                    <h2>About Us</h2>
+                    <p>
+                        <span class="phrase">Typographix leads in AI-driven text and image creation.</span>
+                        <span class="phrase">Their technology redefines digital content creation efficiency.</span>
+                        <span class="phrase">They excel in generating engaging narratives and visuals.</span>
+                        <span class="phrase">The platform is a haven for creators and businesses.</span>
+                        <span class="phrase">Typographix is pioneering. in AI creativity.</span>
+                        <span class="phrase">Their tools transform ideas into experiences.</span>
+                        <span class="phrase">They blend technology, art and storytelling.</span>
+                        <span class="phrase">Inspiring new digital communication.</span>
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Script -->
