Added gallery section part1

--- a/index.html
+++ b/index.html
@@ -45,6 +45,50 @@
                 </div>
             </div>
         </section>
+
+        <!-- Gallery Section -->
+        <section id="gallery">
+            <div class="gallery-container">
+                <div class="group">
+                    <div class="image-box">
+                        <img src="assets/gallery-1.jpg" alt="Floating Crystal City">
+                    </div>
+                    <div class="text-box">
+                        <h3>Transformative AI</h3>
+                        <p>Unleash the full potential of advanced AI in your creative endeavors. Our tools enable unique and compelling digital expressions, providing seamless text and image generation with ease and high efficiency.</p>
+                    </div>
+                </div>
+
+                <div class="image-box tall">
+                    <img src="assets/gallery-2.jpg" alt="Future green city">
+                </div>
+
+                <div class="group">
+                    <div class="text-box">
+                        <h3>Revolutionizing Artistry</h3>
+                        <p>Experience the synergy of art and cutting-edge technology. Our AI-driven solutions offer unmatched precision and artistic flair in text and image creation, continuing to revolutionize the digital content landscape everyday.</p>
+                    </div>
+                    <div class="image-box">
+                        <img src="assets/gallery-3.jpg" alt="Floating Water City">
+                    </div>
+                </div>
+
+                <div class="image-box tall">
+                    <img src="assets/gallery-4.jpg" alt="Alien Glowing Jungle">
+                </div>
+
+                <div class="group">
+                    <div class="image-box">
+                        <img src="assets/gallery-5.jpg" alt="Green Library">
+                    </div>
+                    <div class="text-box">
+                        <h3>Innovative Creation</h3>
+                        <p>Step into the future of dynamic content generation. Our platform caters to a wide range of creative applications, offering intuitive and sophisticated text and image synthesis for diverse needs. You won't be disappointed.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
     </main>
 
     <!-- Script -->
