--- a/index.html
+++ b/index.html
@@ -1,98 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typographix</title>
-    <!-- Zero to Mastery Favicon -->
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link rel="stylesheet" href="./css/compiled_style.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Typographix</title>
+        <!-- Zero to Mastery Favicon -->
+        <link rel="icon" type="image/png" href="assets/favicon.png" />
+        <link rel="stylesheet" href="./css/compiled_style.css" />
+    </head>
+    <body>
+        <main>
+            <!-- Home Section -->
+            <section id="home">
+                <div class="video-container">
+                    <video autoplay muted loop>
+                        <source src="assets/future-tunnel.mp4" />
+                    </video>
+                </div>
+                <!-- Overlay -->
+                <div class="overlay">
+                    <div>
+                        <h1>Typographix</h1>
+                        <p>Where ideas become reality</p>
+                    </div>
+                </div>
+            </section>
 
-    <main>
-        <!-- Home Section -->
-        <section id="home">
-            <div class="video-container">
-                <video autoplay muted loop>
-                    <source src="assets/future-tunnel.mp4">
-                </video>
+            <!-- About Section -->
+            <section id="about">
+                <div class="about-container">
+                    <div class="text-container">
+                        <h2>About Us</h2>
+                        <p>
+                            <span class="phrase"
+                                >Typographix leads in AI-driven text and image
+                                creation.</span
+                            >
+                            <span class="phrase"
+                                >Their technology redefines digital content
+                                creation efficiency.</span
+                            >
+                            <span class="phrase"
+                                >They excel in generating engaging narratives
+                                and visuals.</span
+                            >
+                            <span class="phrase"
+                                >The platform is a haven for creators and
+                                businesses.</span
+                            >
+                            <span class="phrase"
+                                >Typographix is pioneering. in AI
+                                creativity.</span
+                            >
+                            <span class="phrase"
+                                >Their tools transform ideas into
+                                experiences.</span
+                            >
+                            <span class="phrase"
+                                >They blend technology, art and
+                                storytelling.</span
+                            >
+                            <span class="phrase"
+                                >Inspiring new digital communication.</span
+                            >
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Gallery Section -->
+            <section id="gallery">
+                <div class="gallery-container">
+                    <div class="group">
+                        <div class="image-box">
+                            <img
+                                src="assets/gallery-1.jpg"
+                                alt="Floating Crystal City"
+                            />
+                        </div>
+                        <div class="text-box">
+                            <h3>Transformative AI</h3>
+                            <p>
+                                Unleash the full potential of advanced AI in
+                                your creative endeavors. Our tools enable unique
+                                and compelling digital expressions, providing
+                                seamless text and image generation with ease and
+                                high efficiency.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="image-box tall">
+                        <img
+                            src="assets/gallery-2.jpg"
+                            alt="Future green city"
+                        />
+                    </div>
+
+                    <div class="group">
+                        <div class="text-box">
+                            <h3>Revolutionizing Artistry</h3>
+                            <p>
+                                Experience the synergy of art and cutting-edge
+                                technology. Our AI-driven solutions offer
+                                unmatched precision and artistic flair in text
+                                and image creation, continuing to revolutionize
+                                the digital content landscape everyday.
+                            </p>
+                        </div>
+                        <div class="image-box">
+                            <img
+                                src="assets/gallery-3.jpg"
+                                alt="Floating Water City"
+                            />
+                        </div>
+                    </div>
+
+                    <div class="image-box tall">
+                        <img
+                            src="assets/gallery-4.jpg"
+                            alt="Alien Glowing Jungle"
+                        />
+                    </div>
+
+                    <div class="group">
+                        <div class="image-box">
+                            <img
+                                src="assets/gallery-5.jpg"
+                                alt="Green Library"
+                            />
+                        </div>
+                        <div class="text-box">
+                            <h3>Innovative Creation</h3>
+                            <p>
+                                Step into the future of dynamic content
+                                generation. Our platform caters to a wide range
+                                of creative applications, offering intuitive and
+                                sophisticated text and image synthesis for
+                                diverse needs. You won't be disappointed.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Blog Section -->
+            <section class="blog">
+                <div class="blog-container">
+                    <!-- Main Featured Article -->
+                    <div class="featured-article hidden">
+                        <img src="assets/blog-1.jpg" alt="Computer Setup" />
+                        <h1>
+                            Enhancing Productivity: Revolutionizing Modern
+                            Workspaces
+                        </h1>
+                        <p>
+                            In the rapidly evolving landscape of work, the
+                            concept of productivity has taken center stage,
+                            prompting a radical transformation in the design and
+                            functionality of modern workspaces...
+                        </p>
+                        <a href="article1.html">Read More</a>
+                    </div>
+
+                    <!-- Three Smaller Articles -->
+                    <div class="smaller-articles">
+                        <!-- Article 2 -->
+                        <div class="article hidden">
+                            <img src="assets/blog-2.jpg" alt="Robot on bench" />
+                            <h2>
+                                Unveiling the Future: Quantum Leaps in Humanoid
+                                Robotics
+                            </h2>
+                            <p>
+                                In a startling turn of events, the field of
+                                robotics has taken a monumental leap forward
+                                with the introduction of cutting-edge humanoid
+                                robots...
+                            </p>
+                            <a href="article2.html">Read More</a>
+                        </div>
+                        <!-- Article 3 -->
+                        <div class="article hidden">
+                            <img
+                                src="assets/blog-3.jpg"
+                                alt="Underwater Computer"
+                            />
+                            <h2>
+                                Diving Deep: Underwater Cooling Computer
+                                Hardware
+                            </h2>
+                            <p>
+                                In the realm of cutting-edge technology, a
+                                groundbreaking solution has emerged to tackle
+                                the persistent challenge of cooling...
+                            </p>
+                            <a href="article3.html">Read More</a>
+                        </div>
+                        <!-- Article 4 -->
+                        <div class="article hidden">
+                            <img src="assets/blog-4.jpg" alt="Windmill Farm" />
+                            <h2>
+                                Harnessing the Breeze: The Future of Wind Energy
+                            </h2>
+                            <p>
+                                In a world where sustainable energy sources are
+                                gaining paramount importance, wind energy
+                                emerges as a frontrunner in the race to...
+                            </p>
+                            <a href="article4.html">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <!-- Footer -->
+        <footer>
+            <small>&copy; 2025 Typographix</small>
+            <div class="social-icons">
+                <a href="#"
+                    ><i class="fa-brands fa-facebook-f" title="Facebook"></i
+                ></a>
+                <a href="#"
+                    ><i class="fa-brands fa-x-twitter" title="Twitter (X)"></i
+                ></a>
+                <a href="#"
+                    ><i class="fa-brands fa-instagram" title="Instagram"></i
+                ></a>
+                <a href="#"
+                    ><i class="fa-brands fa-linkedin-in" title="LinkenIn"></i
+                ></a>
             </div>
-            <!-- Overlay -->
-            <div class="overlay">
-                <div>
-                    <h1>Typographix</h1>
-                    <p>Where ideas become reality</p>
-                </div>
-            </div>
-        </section>
+        </footer>
 
-        <!-- About Section -->
-        <section id="about">
-            <div class="about-container">
-                <div class="text-container">
-                    <h2>About Us</h2>
-                    <p>
-                        <span class="phrase">Typographix leads in AI-driven text and image creation.</span>
-                        <span class="phrase">Their technology redefines digital content creation efficiency.</span>
-                        <span class="phrase">They excel in generating engaging narratives and visuals.</span>
-                        <span class="phrase">The platform is a haven for creators and businesses.</span>
-                        <span class="phrase">Typographix is pioneering. in AI creativity.</span>
-                        <span class="phrase">Their tools transform ideas into experiences.</span>
-                        <span class="phrase">They blend technology, art and storytelling.</span>
-                        <span class="phrase">Inspiring new digital communication.</span>
-                    </p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Gallery Section -->
-        <section id="gallery">
-            <div class="gallery-container">
-                <div class="group">
-                    <div class="image-box">
-                        <img src="assets/gallery-1.jpg" alt="Floating Crystal City">
-                    </div>
-                    <div class="text-box">
-                        <h3>Transformative AI</h3>
-                        <p>Unleash the full potential of advanced AI in your creative endeavors. Our tools enable unique and compelling digital expressions, providing seamless text and image generation with ease and high efficiency.</p>
-                    </div>
-                </div>
-
-                <div class="image-box tall">
-                    <img src="assets/gallery-2.jpg" alt="Future green city">
-                </div>
-
-                <div class="group">
-                    <div class="text-box">
-                        <h3>Revolutionizing Artistry</h3>
-                        <p>Experience the synergy of art and cutting-edge technology. Our AI-driven solutions offer unmatched precision and artistic flair in text and image creation, continuing to revolutionize the digital content landscape everyday.</p>
-                    </div>
-                    <div class="image-box">
-                        <img src="assets/gallery-3.jpg" alt="Floating Water City">
-                    </div>
-                </div>
-
-                <div class="image-box tall">
-                    <img src="assets/gallery-4.jpg" alt="Alien Glowing Jungle">
-                </div>
-
-                <div class="group">
-                    <div class="image-box">
-                        <img src="assets/gallery-5.jpg" alt="Green Library">
-                    </div>
-                    <div class="text-box">
-                        <h3>Innovative Creation</h3>
-                        <p>Step into the future of dynamic content generation. Our platform caters to a wide range of creative applications, offering intuitive and sophisticated text and image synthesis for diverse needs. You won't be disappointed.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        
-    </main>
-
-    <!-- Script -->
-    <script src="https://kit.fontawesome.com/23499415f6.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
-</body>
+        <!-- Script -->
+        <script
+            src="https://kit.fontawesome.com/23499415f6.js"
+            crossorigin="anonymous"
+        ></script>
+        <script src="script.js"></script>
+    </body>
 </html>
