--- a/index.html
+++ b/index.html
@@ -145,70 +145,70 @@
             </section>
 
             <!-- Blog Section -->
-            <section class="blog">
+            <section id="blog">
                 <div class="blog-container">
                     <!-- Main Featured Article -->
-                    <div class="featured-article hidden">
+                    <div class="featured-article">
                         <img src="assets/blog-1.jpg" alt="Computer Setup" />
-                        <h1>
+                        <h3>
                             Enhancing Productivity: Revolutionizing Modern
                             Workspaces
-                        </h1>
+                        </h3>
                         <p>
                             In the rapidly evolving landscape of work, the
                             concept of productivity has taken center stage,
                             prompting a radical transformation in the design and
                             functionality of modern workspaces...
                         </p>
-                        <a href="article1.html">Read More</a>
+                        <a href="https://jacintodesign.github.io/typographix-blog-v3/article1.html">Read More</a>
                     </div>
 
                     <!-- Three Smaller Articles -->
                     <div class="smaller-articles">
                         <!-- Article 2 -->
-                        <div class="article hidden">
+                        <div class="article">
                             <img src="assets/blog-2.jpg" alt="Robot on bench" />
-                            <h2>
+                            <h3>
                                 Unveiling the Future: Quantum Leaps in Humanoid
                                 Robotics
-                            </h2>
+                            </h3>
                             <p>
                                 In a startling turn of events, the field of
                                 robotics has taken a monumental leap forward
                                 with the introduction of cutting-edge humanoid
                                 robots...
                             </p>
-                            <a href="article2.html">Read More</a>
+                            <a href="https://jacintodesign.github.io/typographix-blog-v3/article2.html">Read More</a>
                         </div>
                         <!-- Article 3 -->
-                        <div class="article hidden">
+                        <div class="article">
                             <img
                                 src="assets/blog-3.jpg"
                                 alt="Underwater Computer"
                             />
-                            <h2>
+                            <h3>
                                 Diving Deep: Underwater Cooling Computer
                                 Hardware
-                            </h2>
+                            </h3>
                             <p>
                                 In the realm of cutting-edge technology, a
                                 groundbreaking solution has emerged to tackle
                                 the persistent challenge of cooling...
                             </p>
-                            <a href="article3.html">Read More</a>
+                            <a href="https://jacintodesign.github.io/typographix-blog-v3/article3.html">Read More</a>
                         </div>
                         <!-- Article 4 -->
-                        <div class="article hidden">
+                        <div class="article">
                             <img src="assets/blog-4.jpg" alt="Windmill Farm" />
-                            <h2>
+                            <h3>
                                 Harnessing the Breeze: The Future of Wind Energy
-                            </h2>
+                            </h3>
                             <p>
                                 In a world where sustainable energy sources are
                                 gaining paramount importance, wind energy
                                 emerges as a frontrunner in the race to...
                             </p>
-                            <a href="article4.html">Read More</a>
+                            <a href="https://jacintodesign.github.io/typographix-blog-v3/article4.html">Read More</a>
                         </div>
                     </div>
                 </div>
