--- a/index.html
+++ b/index.html
@@ -213,6 +213,40 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Contact Section -->
+            <section id="contact">
+                <div class="contact-container">
+                    <h2>Drop us a Message!</h2>
+                    <div class="form-container">
+                        <form action="">
+                            <div class="grid-container">
+                                <div class="form-group">
+                                    <label for="first-name">First Name *</label>
+                                    <input type="text" name="first-name" id="first-name" required />
+                                </div>
+                                <div class="form-group">
+                                    <label for="last-name">Last Name *</label>
+                                    <input type="text" name="last-name" id="last-name" required />
+                                </div>
+                                <div class="form-group">
+                                    <label for="telephone">Telephone *</label>
+                                    <input type="tel" name="telephone" id="telephone" required />
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email *</label>
+                                    <input type="email" name="email" id="email" required />
+                                </div>
+                            </div>
+                            <div class="message">
+                                <label for="message">Message *</label>
+                                <textarea name="message" id="message" required></textarea>
+                            </div>
+                            <button type="submit">Send Message</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!-- Footer -->
