Add toast notification component and styles
Introduced a toast notification UI. Updated the contact form to use Formspree and included the toast container in the HTML. Imported the new toast SCSS partial into the main layout.

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="contact-container">
                     <h2>Drop us a Message!</h2>
                     <div class="form-container">
-                        <form action="">
+                        <form action="https://formspree.io/f/movlejlz" method="POST">
                             <div class="grid-container">
                                 <div class="form-group">
                                     <label for="first-name">First Name *</label>
@@ -267,6 +267,11 @@
                 ></a>
             </div>
         </footer>
+
+        <!-- Toast -->
+        <div class="toast-container">
+            <div id="toast" class="toast">Your message has been sent successfully!</div>
+        </div>
 
         <!-- Script -->
         <script
