--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="contact-container">
                     <h2>Drop us a Message!</h2>
                     <div class="form-container">
-                        <form action="https://formspree.io/f/movlejlz" method="POST">
+                        <form action="https://formspree.io/f/movlejlz" method="POST" id="myForm">
                             <div class="grid-container">
                                 <div class="form-group">
                                     <label for="first-name">First Name *</label>
@@ -231,7 +231,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="telephone">Telephone *</label>
-                                    <input type="tel" name="telephone" id="telephone" required />
+                                    <input type="tel" name="telephone" id="telephone"/>
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Email *</label>
