Improve mobile responsiveness across layout
Added and refined media queries in SCSS and compiled CSS to enhance font sizing, padding, and layout for mobile and portrait orientations. Updated index.html for better readability and accessibility, including form label adjustments and improved markup formatting. These changes ensure a more consistent and user-friendly experience on smaller screens.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,10 @@
                             prompting a radical transformation in the design and
                             functionality of modern workspaces...
                         </p>
-                        <a href="https://jacintodesign.github.io/typographix-blog-v3/article1.html">Read More</a>
+                        <a
+                            href="https://jacintodesign.github.io/typographix-blog-v3/article1.html"
+                            >Read More</a
+                        >
                     </div>
 
                     <!-- Three Smaller Articles -->
@@ -206,7 +209,10 @@
                                 with the introduction of cutting-edge humanoid
                                 robots...
                             </p>
-                            <a href="https://jacintodesign.github.io/typographix-blog-v3/article2.html">Read More</a>
+                            <a
+                                href="https://jacintodesign.github.io/typographix-blog-v3/article2.html"
+                                >Read More</a
+                            >
                         </div>
                         <!-- Article 3 -->
                         <div class="article">
@@ -223,7 +229,10 @@
                                 groundbreaking solution has emerged to tackle
                                 the persistent challenge of cooling...
                             </p>
-                            <a href="https://jacintodesign.github.io/typographix-blog-v3/article3.html">Read More</a>
+                            <a
+                                href="https://jacintodesign.github.io/typographix-blog-v3/article3.html"
+                                >Read More</a
+                            >
                         </div>
                         <!-- Article 4 -->
                         <div class="article">
@@ -236,7 +245,10 @@
                                 gaining paramount importance, wind energy
                                 emerges as a frontrunner in the race to...
                             </p>
-                            <a href="https://jacintodesign.github.io/typographix-blog-v3/article4.html">Read More</a>
+                            <a
+                                href="https://jacintodesign.github.io/typographix-blog-v3/article4.html"
+                                >Read More</a
+                            >
                         </div>
                     </div>
                 </div>
@@ -247,28 +259,55 @@
                 <div class="contact-container">
                     <h2>Drop us a Message!</h2>
                     <div class="form-container">
-                        <form action="https://formspree.io/f/movlejlz" method="POST" id="myForm">
+                        <form
+                            action="https://formspree.io/f/movlejlz"
+                            method="POST"
+                            id="myForm"
+                        >
                             <div class="grid-container">
                                 <div class="form-group">
-                                    <label for="first-name">First Name *</label>
-                                    <input type="text" name="first-name" id="first-name" required />
+                                    <label for="first-name">First Name*</label>
+                                    <input
+                                        type="text"
+                                        name="first-name"
+                                        id="first-name"
+                                        required
+                                    />
                                 </div>
                                 <div class="form-group">
-                                    <label for="last-name">Last Name *</label>
-                                    <input type="text" name="last-name" id="last-name" required />
+                                    <label for="last-name">Last Name*</label>
+                                    <input
+                                        type="text"
+                                        name="last-name"
+                                        id="last-name"
+                                        required
+                                    />
                                 </div>
                                 <div class="form-group">
-                                    <label for="telephone">Telephone *</label>
-                                    <input type="tel" name="telephone" id="telephone"/>
+                                    <label for="telephone">Telephone</label>
+                                    <input
+                                        type="tel"
+                                        name="telephone"
+                                        id="telephone"
+                                    />
                                 </div>
                                 <div class="form-group">
-                                    <label for="email">Email *</label>
-                                    <input type="email" name="email" id="email" required />
+                                    <label for="email">Email*</label>
+                                    <input
+                                        type="email"
+                                        name="email"
+                                        id="email"
+                                        required
+                                    />
                                 </div>
                             </div>
                             <div class="message">
-                                <label for="message">Message *</label>
-                                <textarea name="message" id="message" required></textarea>
+                                <label for="message">Message*</label>
+                                <textarea
+                                    name="message"
+                                    id="message"
+                                    required
+                                ></textarea>
                             </div>
                             <button type="submit">Send Message</button>
                         </form>
@@ -298,7 +337,9 @@
 
         <!-- Toast -->
         <div class="toast-container">
-            <div id="toast" class="toast">Your message has been sent successfully!</div>
+            <div id="toast" class="toast">
+                Your message has been sent successfully!
+            </div>
         </div>
 
         <!-- Script -->
