Add meta tags and lazy loading to images
Added meta description and author tags to improve SEO. Enabled lazy loading for gallery and blog images to enhance page performance. Also updated compiled CSS with minified output.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Typographix - Where ideas become reality"
+        />
+        <meta name="author" content="Farrukh Dilshodov" />
         <title>Typographix</title>
         <!-- Zero to Mastery Favicon -->
         <link rel="icon" type="image/png" href="assets/favicon.png" />
@@ -104,6 +109,7 @@
                             <img
                                 src="assets/gallery-1.jpg"
                                 alt="Floating Crystal City"
+                                loading="lazy"
                             />
                         </div>
                         <div class="text-box">
@@ -122,6 +128,7 @@
                         <img
                             src="assets/gallery-2.jpg"
                             alt="Future green city"
+                            loading="lazy"
                         />
                     </div>
 
@@ -140,6 +147,7 @@
                             <img
                                 src="assets/gallery-3.jpg"
                                 alt="Floating Water City"
+                                loading="lazy"
                             />
                         </div>
                     </div>
@@ -156,6 +164,7 @@
                             <img
                                 src="assets/gallery-5.jpg"
                                 alt="Green Library"
+                                loading="lazy"
                             />
                         </div>
                         <div class="text-box">
@@ -177,7 +186,11 @@
                 <div class="blog-container">
                     <!-- Main Featured Article -->
                     <div class="featured-article">
-                        <img src="assets/blog-1.jpg" alt="Computer Setup" />
+                        <img
+                            src="assets/blog-1.jpg"
+                            alt="Computer Setup"
+                            loading="lazy"
+                        />
                         <h3>
                             Enhancing Productivity: Revolutionizing Modern
                             Workspaces
@@ -198,7 +211,11 @@
                     <div class="smaller-articles">
                         <!-- Article 2 -->
                         <div class="article">
-                            <img src="assets/blog-2.jpg" alt="Robot on bench" />
+                            <img
+                                src="assets/blog-2.jpg"
+                                alt="Robot on bench"
+                                loading="lazy"
+                            />
                             <h3>
                                 Unveiling the Future: Quantum Leaps in Humanoid
                                 Robotics
@@ -219,6 +236,7 @@
                             <img
                                 src="assets/blog-3.jpg"
                                 alt="Underwater Computer"
+                                loading="lazy"
                             />
                             <h3>
                                 Diving Deep: Underwater Cooling Computer
@@ -236,7 +254,11 @@
                         </div>
                         <!-- Article 4 -->
                         <div class="article">
-                            <img src="assets/blog-4.jpg" alt="Windmill Farm" />
+                            <img
+                                src="assets/blog-4.jpg"
+                                alt="Windmill Farm"
+                                loading="lazy"
+                            />
                             <h3>
                                 Harnessing the Breeze: The Future of Wind Energy
                             </h3>
